# miniroute

./: .gitignore  README.md  pyproject.toml
src/miniroute/: miniroute.py
