[project]
name = "miniroute"
version = "0.1.0"
description = ""
authors = [
    {name = "Leo Hehlen",email = "leo.hehlen@pc-rtx.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "miniroute", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
